--- a/reg.html
+++ b/reg.html
@@ -11,8 +11,11 @@
 
 <body>
   <div class="log">
+     
     <div class="page">
-      <h1>REGISTER</h1>
+      <h1><a style="color: white" href="login.html"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" style="margin-right: 2.8rem;margin-left: -4rem" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+</svg></a>REGISTER</h1>
       <form action="index.html" onsubmit="return valid();" method="post" style="text-align: center">
 
         <label for="username">Username</label>
