--- a/login.html
+++ b/login.html
@@ -12,7 +12,10 @@
 <body>
 <div class="log">
   <div class="page">
-    <h1>LOGIN</h1>
+    
+    <h1><a style="color: white" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" style="margin-right: 4rem;margin-left: -6rem" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+</svg></a>LOGIN</h1>
   <form action="your_server_endpoint" method="post" style="text-align: center">
       <label style="margin-top: 2rem;" class="1l" for="username">Email</label>
       <br><input style="font-size: 13px; width: 85%;padding: 0.2rem" type="text" id="username" name="username" required placeholder="email">
